<resources>
    <string name="app_name">DeviceTracker</string>
    <string name="device_id_label">Device ID:</string>
    <string name="server_url_label">Server URL (backend /provision)</string>
    <string name="server_url_hint">https://example.com</string>
    <string name="token_label">Provisioning token (optional)</string>
    <string name="token_hint">empty if not required</string>
    <string name="insecure_tls_label">Allow insecure TLS (self-signed certificate)</string>
    <string name="start_label">Save and start tracking</string>
    <string name="stop_label">Stop tracking</string>
    <string name="log_label">Log</string>
</resources>
